v1.1.0 - Added automatic logging option