@@ -1,6 +1,6 @@
 package io.github.mkaksoy.elementmanager.tasks;
 
-import io.github.mkaksoy.elementmanager.management.Config;
+import io.github.mkaksoy.elementmanager.utils.Config;
 
 import java.io.IOException;
 
@@ -8,15 +8,24 @@ public class AutoRestart {
 
     public static void restart() {
         try {
-            String command = "java -Xmx" + Config.config.getString("server.memory") +
-                    "M -jar " + Config.config.getString("server.jar") +
-                    (Config.config.getBoolean("server.gui") ? "" : " nogui");
+            String command = "java -Xmx" + Config.get("server.memory") +
+                    "M -jar " + Config.get("server.jar") +
+                    (Boolean.TRUE.equals(Config.get("server.jar")) ? "" : " nogui");
 
             String terminalCommand = getTerminalCommand(command);
-            Process process = Runtime.getRuntime().exec(terminalCommand);
-            process.waitFor();
+            ProcessBuilder processBuilder = new ProcessBuilder(terminalCommand.split(" "));
+            processBuilder.inheritIO();
+
+            Process process = processBuilder.start();
+            int exitCode = process.waitFor();
+
+            if (exitCode == 0) {
+                System.out.println("Server started successfully!");
+            } else {
+                System.out.println("Server start failed with exit code: " + exitCode);
+            }
         } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
+            e.fillInStackTrace();
         }
     }
 
